--- a/app/templates/adCategory/admin.index.html.twig
+++ b/app/templates/adCategory/admin.index.html.twig
@@ -24,8 +24,8 @@
             <tr>
                 <th>{{ 'label.id'|trans }}</th>
                 <th>{{ 'label.name'|trans }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.createdAt'|trans, 'ad.createdAt') }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.updatedAt'|trans, 'ad.updatedAt') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label.createdAt'|trans, 'adCategory.createdAt') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label.updatedAt'|trans, 'adCategory.updatedAt') }}</th>
                 <th>{{ 'label.actions'|trans }}</th>
             </tr>
             </thead>
